--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>My Resume</title>
 </head>
 <body>
-    <a href="./index.html">Home</a>
-    <a href="/About.html">About Me</a>
-    <a href="/Contact.html">Contact Me</a>
+    <a href="index.html">Home</a>
+    <a href="About.html">About Me</a>
+    <a href="Contact.html">Contact Me</a>
     <hr>
-    <img src="/img/1.png" height="200" width="150" alt="Resume Photo"> 
+    <img src="1.png" height="200" width="150" alt="Resume Photo"> 
     <h1>Summary</h1>
     <p>Dedicated
         and
