--- a/About.html
+++ b/About.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
 <body>
-    <a href="./index.html">Back to Home</a>
+    <a href="index.html">Back to Home</a>
     <h1>About Me</h1>
     <p>In my work, I have ventured into various domains, showcasing versatility and accomplishment. With a background in Devops, webflow, wordpress, cloud and Fullstack developer relevant fields, such as technology.</p>
 </body>
