--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,7 @@
     <title>contact page</title>
 </head>
 <body>
-    <a href="./index.html">Back to Home</a>
+    <a href="index.html">Back to Home</a>
     <h1>Contact Me</h1>
     <p>Email Id: punitdevopsengineer@codingbulb.com</p>
     <p>Mobile Number: +919034172796</p>
